--- a/src/pages/sections/sections.css
+++ b/src/pages/sections/sections.css
@@ -4,8 +4,13 @@
   .section-headline{
       text-align: center;
       color: #2599bd;
-      font-size: 30px;
+      font-size: 50px;
   }
+  .section-headline1{
+    text-align: center;
+    color: #2599bd;
+    font-size: 20px;
+}
   .class-section {
       width: 100%;
       height: 100%;
@@ -30,9 +35,7 @@
       border:none;
       cursor: pointer;
     }
-    .section-button:hover {
-      background-color: #98d4e6;
-    }
+   
     
     .section-button:active {
       background-color: #98d4e6;
@@ -68,7 +71,7 @@
     }
     
     .row1 :hover {
-      background-color: #2599BD;
+      background-color: #98d4e6;
     }
     .class-tr {
       border: 1px solid white;
@@ -78,10 +81,12 @@
       border: 2px solid white;
       background-color: #ededed;
       border-radius: 15px;
+      text-align:center;
     }
     .nameR {
       padding-left: 10px;
       width: 85% ;
+      
       
     }
     .name2{
