--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,38 +1,39 @@
-*{
-    width: 100%;
-
-}
-
-
 
 .header_page{
     display: flex;
     flex-direction: row;
+    width: 100%;
 }
 
 .main_logo{
-    width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 21.5rem;
+    
 }
 
 .main_logo img{
     width: 150px;
     height: 150px;
+    /* padding-right: 180px; */
 }
 
 .header_title{
+    width: 100%;
     color: #2599BD;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .header_text{
     font-size: 40px;
     font-weight: bold;
     text-align: center;
+    /* padding-left: 270px; */
 
 }
 
