--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -1,11 +1,9 @@
 .container{
-    width: 20%;
     background-color:#2599BD;
-    height: 40rem;
+    height: 45rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-
 }
 .dashboard{
     display: flex;
@@ -16,7 +14,7 @@
 .img_dashboard{
     width:3rem;
     height: auto;
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 .text a{
@@ -30,5 +28,71 @@
 
 .text{
     text-align: center;
-    padding-left: 45px;
+    padding-left: 35px;
+}
+.navhidden_show {
+    display: flex;
+    width: none;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 12px; */
+    border: 1px solid #e5e7eb;
+    background-color: white;
+    /* margin-left: -10px; */
+    /* margin-right: -10px; */
+  }
+  .navhidden_hidden {
+    display: none;
+  }
+  .navmenu-menu {
+    background-color: transparent;
+    border: none;
+    padding: 8px;
+    color: #000;
+    font-size: 18px;
+    font-family: sans-serif;
+    width: 100%;
+    border-radius: 5px;
+  }
+  .navmenu-menu a {
+    text-decoration: none;
+    color: #000;
+  }
+  .navmenu-menu:hover {
+    background-color: #98d4e6;
+    transition: all 0.3s ease-in-out;
+  }
+  .navmenu-button {
+    max-width: 40px;
+    max-height: 40px;
+    background-color: transparent !important;
+    border: none !important;
+    padding: 0px !important;
+    cursor: pointer;
+  }
+  .navmenu {
+    max-width: 40px;
+    max-height: 40px;
+  }
+  @media (min-width: 769px) {
+    .navnavbar-menu {
+        display: none;
+      }
+    .navhidden_show{
+      display: none;
+    }
+  
+  }
+  @media (max-width: 768px) {
+    .navbar-container{
+      display: none;
+    }
+    .container{
+        background-color:white;
+        height: 2rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
 }
