--- a/src/pages/levels/levels.css
+++ b/src/pages/levels/levels.css
@@ -12,6 +12,7 @@
   font-size: 30px;
 }
 .class-section {
+  overflow:auto;
     width: 100%;
     height: 100%;
     /* margin: 50px; */
@@ -43,11 +44,11 @@
     transform: translateY(4px);
   }
   .class-image{
-    width: 2.5rem;
+    width: 2rem;
   }
   .head-div{
     display: flex;
-    font-size: 20px;
+    
     justify-content:flex-end;
     align-items: center;
     margin-top: 20px;
@@ -57,10 +58,7 @@
   
   .name1 {
     padding-left: 10px;
-
-
-    
-  }
+   }
   .class-th {
     border: 2px solid white;
     background-color: #2599BD;
@@ -87,9 +85,7 @@
     width: 50% ;
     text-align:center;
   }
-  .name2{
-    width:60%;
-  }
+ 
  
   .row {
     height: 60px;
@@ -196,3 +192,21 @@
       
     }
   }
+  @media (max-width: 768px) {
+     .class-headline{
+      font-size: 30px;
+      padding-left: 30px;
+     }
+     .class-headline1{
+      font-size: 20px;
+     }
+     .class-section {
+      padding-right: 20px;
+     }
+   
+    
+    .class-image{
+      width: 1.5rem;
+    }
+   
+}
