--- a/src/pages/sections/sections.css
+++ b/src/pages/sections/sections.css
@@ -1,200 +1,215 @@
-  .section-body{
-    width: 90%;
-  }
-  .section-headline{
-      text-align: center;
-      color: #2599bd;
-      font-size: 50px;
-  }
-  .section-headline1{
+.section-body{
+  width: 90%;
+}
+.section-headline{
     text-align: center;
     color: #2599bd;
-    font-size: 20px;
+    font-size: 50px;
 }
-  .class-section {
-      width: 100%;
-      height: 100%;
-      /* margin: 50px; */
-      font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-        Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-        Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-      font-size: 20px;
-    }
-    .class-table {
-      width: 90%;
-      border: 1px solid white;
-      margin: 70px;
-      
-    }
-    .icon {
-      padding: 10px;
-    }
-    .section-button{
-      padding-top: 10px;
-      background-color: transparent;
-      border:none;
-      cursor: pointer;
-    }
-   
+.section-headline1{
+  text-align: center;
+  color: #2599bd;
+  font-size: 30px;
+}
+.section-section {
+
+    width: 100%;
+    height: 100%;
+    /* margin: 50px; */
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+      Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+      Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-size: 20px;
+  }
+  .section-table {
+    width: 90%;
+    border: 1px solid white;
+    margin: 70px;
     
-    .section-button:active {
-      background-color: #98d4e6;
-      box-shadow: 0 5px #666;
-      transform: translateY(4px);
-    }
-    .section-image{
+  }
+  .icon {
+    padding: 10px;
+  }
+  .section-button{
+    padding-top: 10px;
+    background-color: transparent;
+    border:none;
+    cursor: pointer;
+  }
+
+  
+  .section-button:active {
+    background-color: #98d4e6;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+  .section-image{
+    width: 2rem;
+  }
+  .head-div{
+    display: flex;
+    
+    justify-content:flex-end;
+    align-items: center;
+    margin-top: 20px;
+    margin-right: 90px;
+  
+  }
+  
+  .name1 {
+    padding-left: 40px;
+   }
+  .section-th {
+    border: 2px solid white;
+    background-color: #2599BD;
+    color: white;
+   
+    height: 40px;
+   
+  }
+  
+  .row1 :hover {
+    background-color: #98d4e6;
+  }
+  .section-tr {
+    border: 1px solid white;
+    
+  }
+  .section-td {
+    border: 2px solid white;
+    background-color: #ededed;
+    border-radius: 15px;
+  }
+  .nameR {
+    padding-left: 10px;
+    width: 90% ;
+    /* text-align:center; */
+  }
+ 
+ 
+  .row {
+    height: 60px;
+  }
+  /* .edit-icon{
       width: 2.5rem;
-    }
-    .head-div{
-      display: flex;
-      font-size: 20px;
-      justify-content:flex-end;
-      align-items: center;
-      margin-top: 20px;
-      margin-right: 90px;
-    
-    }
-    
-    .name1 {
-      padding-left: 10px;
+  }
+  .edit-section{
+    width:70% ;
+    padding-left: 500px;
+  }
+  
+  .edit-section input {
+    border: none;
+    outline: none;
+    height: 45px;
+    width: 100%;
+    margin: 10px 0;
+    -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+    padding-left: 15px;
+  }
   
   
-      
-    }
-    .class-th {
-      border: 2px solid white;
-      background-color: #2599BD;
-      color: white;
-      
-      height: 40px;
-     
-    }
-    
-    .row1 :hover {
-      background-color: #98d4e6;
-    }
-    .class-tr {
-      border: 1px solid white;
-      
-    }
-    .class-td {
-      border: 2px solid white;
-      background-color: #ededed;
-      border-radius: 15px;
-      text-align:center;
-    }
-    .nameR {
+  .edit-section input::-webkit-input-placeholder {
+    color: #ac9784;
+    text-transform: uppercase;
+    font-size: 16px;
+  }
+  
+  .edit-section input:-ms-input-placeholder {
+    color: #ac9784;
+    text-transform: uppercase;
+    font-size: 16px;
+  }
+  
+  .edit-section input::-ms-input-placeholder {
+    color: #ac9784;
+    text-transform: uppercase;
+    font-size: 16px;
+  }
+  
+  .edit-section input::placeholder {
+    color: #ac9784;
+    text-transform: uppercase;
+    font-size: 16px;
+  }
+  
+  
+  .edit-section .btn-contact {
+    border: none;
+    border-radius: 30px;
+    background-color: #ef4444;
+  
+    cursor: pointer;
+    color: #fff;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 700;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+      Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+      Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+  .csub_button {
+    text-align: center;
+  }
+  .btn-contact:hover {
+    background-color: #ff0000;
+  }
+  
+  .btn-contact:active {
+    background-color: #b70909;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+  .edit-section label {
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+      Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+      Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-weight: 700;
+    font-size: 16px;
+  } */
+ 
+ 
+  
+  @media screen and (max-width: 1024px) {
+    .name {
       padding-left: 10px;
-      width: 85% ;
-      
-      
+      width: 50%;
+      text-align: left;
     }
-    .name2{
-      width:60%;
-    }
-   
-    .row {
-      height: 60px;
-    }
-    /* .edit-icon{
-        width: 2.5rem;
-    }
-    .edit-section{
-      width:70% ;
-      padding-left: 500px;
-    }
-    
-    .edit-section input {
-      border: none;
-      outline: none;
-      height: 45px;
-      width: 100%;
-      margin: 10px 0;
-      -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
-      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
-      padding-left: 15px;
-    }
-    
-    
-    .edit-section input::-webkit-input-placeholder {
-      color: #ac9784;
-      text-transform: uppercase;
-      font-size: 16px;
-    }
-    
-    .edit-section input:-ms-input-placeholder {
-      color: #ac9784;
-      text-transform: uppercase;
-      font-size: 16px;
-    }
-    
-    .edit-section input::-ms-input-placeholder {
-      color: #ac9784;
-      text-transform: uppercase;
-      font-size: 16px;
-    }
-    
-    .edit-section input::placeholder {
-      color: #ac9784;
-      text-transform: uppercase;
-      font-size: 16px;
-    }
-    
-    
-    .edit-section .btn-contact {
-      border: none;
-      border-radius: 30px;
-      background-color: #ef4444;
-    
-      cursor: pointer;
-      color: #fff;
-      padding: 10px;
-      font-size: 16px;
-      font-weight: 700;
-      font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-        Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-        Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-      text-transform: uppercase;
-      text-align: center;
-      margin-top: 25px;
-      margin-bottom: 25px;
-    }
-    .csub_button {
-      text-align: center;
-    }
-    .btn-contact:hover {
-      background-color: #ff0000;
-    }
-    
-    .btn-contact:active {
-      background-color: #b70909;
-      box-shadow: 0 5px #666;
-      transform: translateY(4px);
-    }
-    .edit-section label {
-      font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-        Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-        Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-      font-weight: 700;
-      font-size: 16px;
+    /* .edit-section{
+      width:90% ;
+      padding-left: 150px;
     } */
-   
+    .section-table {
+      width: 80%;
+      border: 1px solid white;
+      margin: 50px;
+      
+    }
+  }
+  @media (max-width: 768px) {
+     .section-headline{
+      font-size: 30px;
+      padding-left: 30px;
+     }
+     .section-headline1{
+      font-size: 20px;
+     }
+     .section-section {
+      padding-right: 20px;
+     }
    
     
-    @media screen and (max-width: 1024px) {
-      .name {
-        padding-left: 10px;
-        width: 80%;
-        text-align: left;
-      }
-      /* .edit-section{
-        width:90% ;
-        padding-left: 150px;
-      } */
-      .class-table {
-        width: 80%;
-        border: 1px solid white;
-        margin: 50px;
-        
-      }
+    .section-image{
+      width: 1.5rem;
     }
+    .name1{
+      padding-left: 65px;
+    }
+   
+}
