--- a/src/pages/sections/sections.css
+++ b/src/pages/sections/sections.css
@@ -12,7 +12,7 @@
   font-size: 30px;
 }
 .section-section {
-
+  /* overflow:auto; */
     width: 100%;
     height: 100%;
     /* margin: 50px; */
@@ -56,7 +56,7 @@
   
   }
   
-  .name1 {
+  .nameR1 {
     padding-left: 40px;
    }
   .section-th {
@@ -83,7 +83,7 @@
   .nameR {
     padding-left: 10px;
     width: 90% ;
-    /* text-align:center; */
+    text-align:center;
   }
  
  
@@ -176,7 +176,7 @@
  
   
   @media screen and (max-width: 1024px) {
-    .name {
+    .nameR {
       padding-left: 10px;
       width: 50%;
       text-align: left;
@@ -208,7 +208,7 @@
     .section-image{
       width: 1.5rem;
     }
-    .name1{
+    .nameR1{
       padding-left: 65px;
     }
    
