--- a/src/pages/Attendances/Report/Report.css
+++ b/src/pages/Attendances/Report/Report.css
@@ -10,7 +10,13 @@
 .searchName input {
     padding: 10px;
     width: 15rem;
+    border: 2px solid #2599BD;
+
+    
 }
+
+
+
 
 .searchSection input{
     padding: 10px;
@@ -34,4 +40,32 @@
 
 .boxStatus{
     display: flex;
+    margin-right: 8rem;
+}
+
+.searchSection{
+    display: flex;
+    justify-content: space-around;
+}
+
+.searchSection input{
+    border: 2px solid #2599BD;
+}
+
+.report{
+    display: flex;
+    justify-content: space-between;
+}
+
+.boxStatus1 h5{
+    border: 1px solid black;
+    padding: 4px;
+    margin: 10px;
+    width: 15.3rem;
+    
+}
+
+.boxStatus1{
+    display: flex;
+    margin-right: 8rem;
 }
