--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   height: 40vmin;
   pointer-events: none;
 }
+.app-body{
+  display: flex;
+  flex-direction: row;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -34,5 +38,11 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@media (max-width:768px){
+  .app-body{
+    display: flex;
+    flex-direction: column;
   }
 }
