--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -1,20 +1,42 @@
 .container{
-    background-color:#2599BD;
-    height: 45rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+  background-color: #2599BD;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width:fit-content
 }
 .dashboard{
     display: flex;
     align-items: center;
     padding: 20px;
+   margin-top: 10px;
 }
 
+.collaborate{
+  margin-top: -157px!important;
+}
+.textForm{
+  background-color: transparent;
+}
 .img_dashboard{
     width:3rem;
     height: auto;
     margin-left: 5px;
+}
+.main_logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24rem;
+  padding-top: 5px;
+  
+}
+.main_logo img{
+  width: 150px;
+  height: 150px;
+  margin-left: -90px;
+  /* padding-right: 180px; */
 }
 
 .text a{
@@ -94,5 +116,8 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+    }
+    .main_logo{
+      display: none;
     }
 }
