--- a/src/components/StudentSuperAdmin/StudentSuperAdmin.css
+++ b/src/components/StudentSuperAdmin/StudentSuperAdmin.css
@@ -2,42 +2,107 @@
   font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
 
-
+.lol {
+  width: min-content;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
 .mappingdata{
   display: grid;
-   gap: 40px ; 
-  grid-template-columns: 1fr 1fr 1fr;
-   padding: 30px; 
-  margin: auto auto;
-  width: 80%;
+  grid-template-columns: 33% 33% 33%;
+  grid-gap: 20px;
+  width: 100%;
+}
 
+ 
+.first-buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 200px;
+  width: 100%;
+}
+#header-search{
+  width: 200px;
+  font-size: 20px;
+  line-height: 50px;
+  /* border-color: #2599BD ;
+  border-radius: 12px; */
+  flex: 1;
+  border: none;
+  outline: none;
   
   
 }
+.searchStudentButton{
+  background: #14738f;
  
+  /* border-color: black ; */
+  border-radius: solid ;
+  line-height: 40px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: row;
+  width:400px
+  
 
+}
+.search-btns{
+  
+    border: none;
+    width: 150px;
+    font-size: 10px;
+    font-weight: bolder;
+    padding: 10px;
+    color: rgba(255, 255, 255, 0.87);
+    background:#14738f;
+    border-radius: 12px;
+    border-color: #2599BD ;
+    font-size: 20px;
+    line-height: 30px;
+}
 
-.coll-btn{
-  width: 200px;
-  font-size: 25px;
-  text-align: center;
+.coll-btns{
+  
+  
   font-weight: bolder;
   padding: 10px;
   color: rgba(255, 255, 255, 0.87);
-  background: -webkit-linear-gradient(15deg, #AAC9FF,#77A7FF,#1877F2,#2851A3,#1D3C78);
+  background:#14738f;
   border-radius: 12px;
   border-color: #2599BD ;
-  font-size: 20px;
+  margin-right: 0px;
   line-height: 30px;
+  width: 250px;
+  height: 50px;
+  font-size: 20px !important;
+  
+}
+
+.coll-btn-select{
+  
+  width: 250px;
+  height: 50px;
+  font-size: 20px !important;
+  align-items: flex-end;
+  padding: 10px;
+  color: rgba(255, 255, 255, 0.87);
+  background: #14738f;
+  border-radius: 12px;
+  border-color: #2599BD ;
+  /* font-size: 10px; */
+  line-height: 20px;
+  
 }
 .colle-btn{
   width: 150px;
   font-size: 25px;
-  text-align: center;
+  align-items: flex-start;
   font-weight: bolder;
   padding: 10px;
   color: rgba(255, 255, 255, 0.87);
-  background: -webkit-linear-gradient(15deg, #AAC9FF,#77A7FF,#1877F2,#2851A3,#1D3C78);
+  background: #14738f !important;;
   border-radius: 12px;
   border-color: #2599BD ;
   font-size: 20px;
@@ -47,7 +112,7 @@
     
     padding: 30px;
     /* color: white; */
-    background-color: #2599BD;
+    background-color:#7dc9e1;
     font-size: 20px;
     font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     border-radius: 10px;
@@ -55,10 +120,16 @@
 
 .student-img{
 width: 50%;
+
+}
+.align-info{
+  text-align: left;
+  padding-left: 50px;
+  
 }
 
 .button:hover{
-  background: -webkit-linear-gradient(-15deg,blue , #2599BD);
+  background: -webkit-linear-gradient(-86deg,blue , #2599BD);
   border-radius: 10px;
   border-color: #050108eb ;
   color: rgba(223, 210, 210, 0.904);
@@ -66,60 +137,88 @@ width: 50%;
   line-height: 30px;
   cursor: pointer;
 }
-
+ 
 .collection-button {
-  width: 70%;
+  width:150px;
   height: 7%;
-  background: -webkit-linear-gradient(15deg, #AAC9FF,#77A7FF,#1877F2,#2851A3,#1D3C78);
+  background: #14738f;
   border-radius: 12px;
   border-color: #2599BD ;
   color: rgba(255, 255, 255, 0.87);
   font-size: 20px;
   line-height: 30px;
+  margin-bottom: 5px;
+} 
+
+hr{
+  border-top: 1px solid black;
+ border-bottom: black;
+
 }
 
 
 
 
-.collection-button{
-    width: 70%;
-    height: 7%;
-}
+
 
 
    .formm{
-
         font-size: 25px;
+        position: fixed;
         line-height: 30px;
-        color: rgba(255, 255, 255, 0.673);
         display: flex;
         flex-direction: row;
-        margin-top: 5%;
-        gap:200px;
-        color: black;
+        gap: 20px;
+        width: 100%;
+        justify-content: center;
+        background-color:rgba(0, 0, 0, 0.749) !important; 
+        z-index: 10000;
+        top:150px;
         
-         
-        }  
+        
+}  
+
+    .textForm{
+     width: 150px;
+     border-color:#0a4d61 ;
+     height:20px;
+     border-radius: 10px;
+    }
+
+      .alignForm{
+        align-self: self-start;
+        margin-left: 150px;
+        color:white!important;
+      }
       .firstt-formm{
+        margin-top: 120px;
+        margin-bottom: 150px;
            
             border-radius: 10px;
-            background-color:#2599BD;
+            background-color: #14738f;
             align-items: center;
             display: flex;
             flex-direction: column;
-            width:480px;
-            margin-left: 264px;
-        
+            position: relative;
+            width:30%;
+            z-index: 10;
+            top: 1px;
+            margin-left: -350px;
+            
+            /* display: none;  */
         } 
         .second-formm{
-            border-radius: 10px;
-            background-color:#2599BD;
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            width:480px;
-            margin-left: -140px;
-           
+          border-radius: 10px;
+          background-color: #14738f;
+          align-items: center;
+          display: flex;
+          flex-direction: column;
+          position: relative;
+          width:40%;
+          z-index: 10;
+          top: 1px;
+          margin-left: -350px;
+        
           }
 
 
@@ -143,23 +242,31 @@ width: 50%;
         line-height: 30px;
         color:black;
         display: flex;
-        flex-direction: column;
+        flex-direction: row; 
+        
+        
         
         } 
       
       .firstt-formm{
-        margin-left: 1%;
-        width: 360px;
+        /* margin-left: 1%; */
+        width: 100%;
+        /* margin-left: 80%; */
     
     
     }
     .second-formm{
-         margin-left: 1%;
-         width: 360px;
+         /* margin-left: 1%; */
+         width: 100%;
         
         }
-    
-
+        
+    .coll-btn-select{
+      width:80%;
+    }
+    .searchStudentButton{
+      display: none;
+    }
             
           
         }
