--- a/src/components/StudentSuperAdmin/StudentSuperAdmin.css
+++ b/src/components/StudentSuperAdmin/StudentSuperAdmin.css
@@ -187,7 +187,7 @@ hr{
       .alignForm{
         align-self: self-start;
         margin-left: 150px;
-        color:white!important;
+         color:rgba(255, 255, 255, 0.962)!important; 
       }
       .firstt-formm{
         margin-top: 120px;
