--- a/src/components/Dashboard-pic/MainPic.css
+++ b/src/components/Dashboard-pic/MainPic.css
@@ -1,11 +1,21 @@
 .picture img{
-    height: 45rem;
+    height: 50rem;
     width :103rem;
 }
 
+.app-body{
+    display: flex;
+    
+}
 @media (max-width: 768px) {
     .picture img{
         height: 45rem;
         width :24.5rem;
     }
+    .app-body{
+        display: flex;
+        flex-direction: column;
+        
+    }
+
 }
