--- a/src/pages/sections/sections.css
+++ b/src/pages/sections/sections.css
@@ -1,5 +1,7 @@
 .section-body{
   width: 90%;
+  margin-top: -40px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .section-headline{
     text-align: center;
@@ -21,7 +23,12 @@
   padding: 5px;
   margin: 5px;
   border-radius: 15px;
+  border: 0.5px solid 
 }
+.section-inputR{
+  width: 98%;
+  padding-left: 10px;
+ }
 .section-buttonR{
   padding: 5px;
   background-color: #2599bd;
@@ -53,6 +60,22 @@
     background-color: transparent;
     border:none;
     cursor: pointer;
+  }
+  .section-buttonR{
+    padding: 5px;
+    background-color: #2599bd;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+  }
+  .section-buttonRR{
+    padding: 5px;
+    background-color: #2599bd;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    margin-left: 150px;
+    margin-top: 5px;
   }
 
   
@@ -238,8 +261,13 @@
     }
     .section-input{
       padding: 5px;
-      margin: 5px;
+      margin-left: 70px;
     }
-    
+    .section-buttonRR{
+      margin-left: 133px;
+    }
+    .section-body{
+      margin-top: 0;
+    }
    
 }
