--- a/src/components/TeacherSuperAdmin/TeacherSuperAdmin.css
+++ b/src/components/TeacherSuperAdmin/TeacherSuperAdmin.css
@@ -3,161 +3,152 @@
   }
   
   
-  .mappingdatas{
-    display: grid;
-     gap: 40px ; 
-    grid-template-columns: 1fr 1fr 1fr;
-     padding: 30px; 
-    margin: auto auto;
-    width: 100%;
-  
-    
-    
+  .lol {
+    width: min-content;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
   }
-   
+
+  .coll-btn-select1{
   
-  
-  .coll-btn{
-    width: 200px;
-    font-size: 25px;
-    text-align: center;
-    font-weight: bolder;
+    width: 250px;
+    height: 50px;
+    font-size: 20px !important;
+    align-items: flex-end;
     padding: 10px;
     color: rgba(255, 255, 255, 0.87);
-    background: -webkit-linear-gradient(15deg, #AAC9FF,#77A7FF,#1877F2,#2851A3,#1D3C78);
+    background: #14738f;
     border-radius: 12px;
     border-color: #2599BD ;
-    font-size: 20px;
-    line-height: 30px;
-  }
-  .colle-btn{
-    width: 150px;
-    font-size: 25px;
-    text-align: center;
-    font-weight: bolder;
-    padding: 10px;
-    color: rgba(255, 255, 255, 0.87);
-    background: -webkit-linear-gradient(15deg, #AAC9FF,#77A7FF,#1877F2,#2851A3,#1D3C78);
-    border-radius: 12px;
-    border-color: #2599BD ;
-    font-size: 20px;
+    /* font-size: 10px; */
     line-height: 20px;
+    
   }
-  .infoparts{
+
+  .firstt-formm1{
+    margin-top: 80px; 
+   
       
-      padding: 30px;
-      /* color: white; */
-      background-color: #2599BD;
-      font-size: 20px;
-      font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-      border-radius: 10px;
-  }
+       border-radius: 10px;
+       background-color: #14738f;
+       align-items: center;
+       display: flex;
+       flex-direction: column;
+       position: relative;
+       width:30%;
+       z-index: 10;
+       top: 1px;
+       margin-bottom: 250px;
+      
+   } 
+  .second-formm1{
+    border-radius: 10px;
+    background-color: #14738f;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width:40%;
+     z-index: 10;
+    top: 1px; 
+    margin-top: 150px;
+    margin-left: -30px;
+    margin-bottom: 500px;
+
+    
   
-  .teacher-img{
-  width: 50%;
-  }
-  
-  /* .button:hover{
-    background: -webkit-linear-gradient(-15deg,blue , #2599BD);
+    }
+
+  .button1:hover{
+    background:  #2599BD;
     border-radius: 10px;
     border-color: #050108eb ;
-    color: rgba(223, 210, 210, 0.904);
     font-size: 20px;
     line-height: 30px;
     cursor: pointer;
-  } */
+  }
+  #header-search1{
+    width: 200px;
+    font-size: 20px;
+    line-height: 50px;
+    /* border-color: #2599BD ;
+    border-radius: 12px; */
+    flex: 1;
+    border: none;
+    outline: none;
+    
+    
+  }
+  .search-btns1{
   
-   .collection-buttons {
+    border: none;
     width: 150px;
-    height: 7%;
-    background: -webkit-linear-gradient(15deg, #AAC9FF,#77A7FF,#1877F2,#2851A3,#1D3C78);
+    font-size: 10px;
+    font-weight: bolder;
+    padding: 10px;
+    color: rgba(255, 255, 255, 0.87);
+    background:#14738f;
     border-radius: 12px;
     border-color: #2599BD ;
-    color: rgba(255, 255, 255, 0.87);
     font-size: 20px;
     line-height: 30px;
-  } 
+}
+.coll-btns1{
   
   
+  font-weight: bolder;
+  padding: 10px;
+  color: rgba(255, 255, 255, 0.87);
+  background:#14738f;
+  border-radius: 12px;
+  border-color: #2599BD ;
+  margin-right: 0px;
+  line-height: 30px;
+  width: 250px;
+  height: 50px;
+  font-size: 20px !important;
   
-  
-  
-  
-  
-     .formms{
-  
-          font-size: 25px;
-          line-height: 30px;
-          color: rgba(255, 255, 255, 0.673);
-          display: flex;
-          flex-direction: row;
-          margin-top: 5%;
-          gap:200px;
-          color: black;
-          
-           
-          }  
-        .firstt-formms{
-             
-              border-radius: 10px;
-              background-color:#2599BD;
-              align-items: center;
-              display: flex;
-              flex-direction: column;
-              width:480px;
-              margin-left: 90px;
-          
-          } 
-          .second-formms{
-              border-radius: 10px;
-              background-color:#2599BD;
-              align-items: center;
-              display: flex;
-              flex-direction: column;
-              width:480px;
-              margin-left: -20px;
-             
-            }
-  
-  
+}
+
   @media screen and (max-width: 768px) {
+    .lol{
+      margin-left: 25px;
+    }
+    .firstt-formm1{
+      /* margin-left: 1%; */
+      width: 80%;
+      /* margin-left: 80%; */
   
-   
   
-  
-  
-      .mappingdatas{
-          display: grid;
-          gap: 40px ;
-          grid-template-columns: 1fr ;
-          padding: 10px;
-          margin: auto auto;
-          width: 95%;
-        }
-        .formms{
-  
-          font-size: 25px;
-          line-height: 30px;
-          color:black;
-          display: flex;
-          flex-direction: column;
-          
-          } 
-        
-        .firstt-formms{
-          margin-left: 1%;
-          width: 360px;
+  }
+
+    .childSection1{
+      font-size: 15px!important;
+      width: 27%;
+     }
+     .second-formm1{
+      display: flex;
+      flex-direction: column;
+      width: 75%;
+      margin-left: 30px;
+     
+     }
+
+     .first-buttons1{
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      align-items: center;
+    }
+
+    .coll-btn-select1{
+      width:100% !important;
+      align-items: center;
       
-      
-      }
-      .second-formms{
-           margin-left: 1%;
-           width: 360px;
-          
-          }
-      
-  
-              
-            
-          }
-  
+    }
+    .coll-btns1{
+      width: 45%;
+    }
+
+  }
