--- a/src/components/StudentSuperAdmin/StudentSuperAdmin.css
+++ b/src/components/StudentSuperAdmin/StudentSuperAdmin.css
@@ -1,6 +1,9 @@
 *{
   font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
+body{
+  align-items: center;
+}
 
 .lol {
   width: min-content;
@@ -10,7 +13,7 @@
 }
 .mappingdata{
   display: grid;
-  grid-template-columns: 33% 33% 33%;
+  grid-template-columns: 27% 27% 27%;
   grid-gap: 20px;
   width: 100%;
 }
@@ -110,10 +113,11 @@
 }
 .infopart{
     
-    padding: 30px;
+    /* padding: 15px; */
+    width: 380px;
     /* color: white; */
     background-color:#7dc9e1;
-    font-size: 20px;
+    font-size: 17px;
     font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     border-radius: 10px;
 }
@@ -334,7 +338,7 @@ color: black!important;
         /* gap: 40px ; */
         grid-template-columns: 1fr ;
         padding: 10px;
-        margin: auto auto;
+        /* margin: auto auto; */
         width: 30%;
         margin:0px;
       }
