--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
+ *{
+  margin: 0;
+ }
  .App {
   text-align: center;
 } 
 
 .App-logo {
+  
   height: 40vmin;
   pointer-events: none;
 }
 
 
-
+.app-body {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+}
 
 /* @media (max-width: 768px) {
   .app-body{
