--- a/src/components/StudentSuperAdmin/StudentSuperAdmin.css
+++ b/src/components/StudentSuperAdmin/StudentSuperAdmin.css
@@ -1,29 +1,34 @@
 *{
   font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
-body{
-  align-items: center;
-}
+
 
 .lol {
-  width: min-content;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
+    width: min-content;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      margin-left: 108px;
 }
 .mappingdata{
   display: grid;
-  grid-template-columns: 27% 27% 27%;
-  grid-gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr ;
+  grid-gap: 65px;
   width: 100%;
 }
-
+.student-img {
+  width:200px;
+  padding-left: 80px;
+}
  
+.del{
+  margin-bottom: 20px!important;
+}
 .first-buttons{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 200px;
+  gap: 100px;
   width: 100%;
 }
 #header-search{
@@ -114,7 +119,7 @@ body{
 .infopart{
     
     /* padding: 15px; */
-    width: 380px;
+    /* width: 380px; */
     /* color: white; */
     background-color:#7dc9e1;
     font-size: 17px;
@@ -122,10 +127,7 @@ body{
     border-radius: 10px;
 }
 
-.student-img{
-width: 50%;
 
-}
 .align-info{
   text-align: left;
   padding-left: 50px;
