--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -1,6 +1,6 @@
-.container{
+.container1{
   background-color:#2599BD;
-  height: 50rem;
+  height: 49.5rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
