--- a/src/components/StudentSuperAdmin/StudentSuperAdmin.css
+++ b/src/components/StudentSuperAdmin/StudentSuperAdmin.css
@@ -1,6 +1,20 @@
 *{
   font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
+.class-body-RR{
+  margin-left: 50px;
+  width: 90%;
+ 
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.class-headline-RR{
+    text-align: center;
+    color: #2599bd;
+    font-size: 50px;
+   
+    
+}
+
 
 
 .lol {
@@ -9,6 +23,7 @@
       flex-direction: column;
       gap: 50px;
       margin-left: 108px;
+      margin-top: 30px;
 }
 .mappingdata{
   display: grid;
@@ -181,7 +196,7 @@ hr{
         top:150px;
         margin-top: -150px;
         
-        margin-left: -302px;
+        margin-left: -380px;
 }  
 
   #typee{
@@ -275,7 +290,7 @@ color: black!important;
           .levsecc{
             display: flex;
             background-color:#7dc9e1;
-            width:10%;
+            width:160px;
             font-size: 30px;
             font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
             border-radius: 10px;
@@ -293,7 +308,7 @@ color: black!important;
 @media screen and (max-width: 768px) {
   
     .lol{
-      margin-left: 25px;
+      margin-left:40px;
     }
 
      .childSection{
@@ -421,6 +436,29 @@ color: black!important;
   
     .searchStudentButton{
       display: none;
+    }
+    .class-body-RR{
+      margin-left:10px;
+      width: 90%;
+     
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .class-headline-RR{
+        text-align: center;
+        color: #2599bd;
+        font-size: 50px;
+       
+        
+    }
+    .levsecc{
+      display: flex;
+      background-color:#7dc9e1;
+      width:160px;
+      font-size: 30px;
+      font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+      border-radius: 10px;
+      text-align: center;
+      
     }
             
           
