--- a/src/components/TeacherSuperAdmin/TeacherSuperAdmin.css
+++ b/src/components/TeacherSuperAdmin/TeacherSuperAdmin.css
@@ -1,6 +1,19 @@
 * {
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
+.class-body-R{
+  margin-left: 50px;
+  width: 90%;
+ 
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.class-headline-R{
+    text-align: center;
+    color: #2599bd;
+    font-size: 50px;
+   
+    
+}
 
 
 .lolTeacher {
@@ -9,6 +22,7 @@
   flex-direction: column;
   gap: 50px;
   margin-left: 108px;
+  margin-top: 30px;
 }
 
 .coll-btn-select1 {
@@ -36,8 +50,6 @@
 
 .firstt-formm1 {
   margin-top: 80px;
-
-
   border-radius: 10px;
   background-color: #14738f;
   align-items: center;
@@ -90,6 +102,15 @@
 
 
 }
+.levseccR{
+  display: flex;
+  background-color:#7dc9e1;
+  width:160px;
+  font-size: 30px;
+  font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+  border-radius: 10px;
+  
+}
 
 .search-btns1 {
 
@@ -124,8 +145,8 @@
 }
 
 @media screen and (max-width: 768px) {
-  .lol {
-    margin-left: 25px;
+  .lolTeacher{
+    margin-left:45px;
   }
 
   .firstt-formm1 {
@@ -159,11 +180,35 @@
   .coll-btn-select1 {
     width: 100% !important;
     align-items: center;
+    
 
   }
 
   .coll-btns1 {
     width: 45%;
+  }
+  .class-body-R{
+    margin-left:20px;
+    width: 90%;
+   
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  .class-headline-R{
+      text-align: center;
+      color: #2599bd;
+      font-size: 50px;
+     
+      
+  }
+  .levseccR{
+    display: flex;
+    background-color:#7dc9e1;
+    width:160px;
+    font-size: 30px;
+    font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+    border-radius: 10px;
+    text-align: center;
+    
   }
 
 }
