--- a/src/pages/attendance/Attendance.css
+++ b/src/pages/attendance/Attendance.css
@@ -6,6 +6,18 @@
   border-radius: 15px;
   color: white;
 }
+.class-body-att{
+  margin-left: 100px;
+  width: 90%;
+  margin-top:5px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.class-headline-att{
+    text-align: center;
+    color: #2599bd;
+    font-size: 50px;
+    
+}
 
 .section {
   width: 20rem;
