--- a/src/pages/teachers/Teacher.css
+++ b/src/pages/teachers/Teacher.css
@@ -1,6 +1,18 @@
 *{
     font-family:  'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
   }
+  .class-body-t{
+    margin-left: 100px;
+    width: 90%;
+    margin-top:5px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  .class-headline-t{
+      text-align: center;
+      color: #2599bd;
+      font-size: 50px;
+      
+  }
   .student-dropT{
     width:12rem;
     width: 18rem;
@@ -9,9 +21,7 @@
     border-radius: 15px;
     color:white;
     margin-left: 20px;
-  
-    
-    }
+  }
     .student-drop-chidT{
       width:14rem;
       font-size: 20px !important;
@@ -92,6 +102,14 @@
       width:10rem;
       font-size: 20px !important;
       }  
+      .class-body-t{
+        margin-top: 0;
+        margin-left: 0px;
+      }
+       .class-headline-t{
+        font-size: 30px;
+        padding-left: 30px;
+      }
        
             
  }
