--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -88,7 +88,7 @@
   .navbar-container{
     display: none;
   }
-  .container{
+  .container1{
       background-color:white;
       height: 2rem;
       display: flex;
