--- a/src/pages/Report/Report.css
+++ b/src/pages/Report/Report.css
@@ -74,3 +74,9 @@
 
 }
 
+.background{
+    background-image: url("download.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
